--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "iohook": "^0.3.1",
-    "js-yaml": "^3.12.1"
+    "js-yaml": "^3.12.1",
+    "moment": "^2.24.0"
   }
 }
